<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/teal_700"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:gravity="center"
        android:hint="@string/Name"
        android:inputType="textPersonName"
        android:textColor="@color/teal_700"
        android:textColorHint="@color/teal_700"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:gravity="center"
        android:hint="@string/phone"
        android:inputType="phone"
        android:textColor="@color/red"
        android:textColorHint="@color/red"
        android:textSize="30sp"
        android:textStyle="italic"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:hint="@string/number"
        android:inputType="number"
        android:textColor="#b76e79"
        android:textColorHint="#b76e79"
        android:textSize="30sp"
        android:textStyle="italic"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:gravity="center"
        android:hint="@string/PW"
        android:inputType="textPassword"
        android:textColor="#489186"
        android:textColorHint="#489186"
        android:textSize="30sp"
        android:textStyle="italic"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#512478"
        android:textColorHint="#512478"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:ignore="Autofill,TextFields" />


</LinearLayout>