<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/teal_700"
    android:gravity="top|center"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:ems="150"
        android:gravity="center"
        android:text="@string/hello"
        android:textColor="@color/purple_500"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/etOne"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autofillHints="Write smthng"
        android:gravity="center"
        android:inputType="text"
        android:textSize="30sp"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/etTwo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autofillHints="Write smthng"
        android:gravity="center"
        android:inputType="date"
        android:textSize="30sp"
        tools:ignore="SpeakableTextPresentCheck" />

    <Switch
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:button="@color/teal_200"
        android:gravity="center" />

    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn1" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn2" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/chckbx"
        android:textColor="@color/teal_200" />


</LinearLayout>